# pcl-binaries-android-armv8

./: .gitattributes  LICENSE  README.md  build.gradle  settings.gradle
.github/workflows/: gradle-publish.yml
gradle/wrapper/: gradle-wrapper.properties
pclibrary/: build.gradle
pclibrary/src/androidTest/java/com/example/pclibrary/: ExampleInstrumentedTest.kt
pclibrary/src/main/cpp/: CMakeLists.txt  pclibrary.cpp
pclibrary/src/main/cpp/pclib/jniLibs/arm64-v8a/boost/: conaninfo.txt  conanmanifest.txt
pclibrary/src/main/cpp/pclib/jniLibs/arm64-v8a/boost/include/boost/container_hash/: hash.hpp
pclibrary/src/main/cpp/pclib/jniLibs/arm64-v8a/eigen/: conaninfo.txt  conanmanifest.txt
pclibrary/src/main/cpp/pclib/jniLibs/arm64-v8a/flann/: conaninfo.txt  conanmanifest.txt
pclibrary/src/main/cpp/pclib/jniLibs/arm64-v8a/lz4/: conaninfo.txt  conanmanifest.txt
pclibrary/src/main/cpp/pclib/jniLibs/arm64-v8a/pcl/: conaninfo.txt  conanmanifest.txt
pclibrary/src/main/cpp/pclib/jniLibs/arm64-v8a/pcl/cmake/Modules/: PCLConfig.cmake  PCLConfigVersion.cmake
pclibrary/src/main/cpp/pclib/jniLibs/arm64-v8a/pcl/include/pcl/: pcl_config.h
pclibrary/src/main/cpp/pclib/jniLibs/arm64-v8a/pcl/include/pcl/segmentation/: supervoxel_clustering.h
pclibrary/src/main/cpp/pclib/jniLibs/arm64-v8a/pcl/lib/: libpcl_features.zip.002  libpcl_io_ply.zip.001  libpcl_kdtree.zip.001  libpcl_ml.zip.001  libpcl_octree.zip.001  libpcl_stereo.zip.001
pclibrary/src/main/java/com/example/pclibrary/: NativeLib.kt
pclibrary/src/test/java/com/example/pclibrary/: ExampleUnitTest.kt
